--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(PSI_ANALYTICS)
 cmake_minimum_required(VERSION 3.13)
 cmake_policy(SET CMP0077 NEW)
+cmake_policy(SET CMP0167 OLD)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
 
@@ -10,11 +11,19 @@ option(PSI_ANALYTICS_BUILD_EXAMPLE "Build PSI analytics example" ON)
 set(PSI_ANALYTICS_SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
 set(PSI_ANALYTICS_BINARY_ROOT "${CMAKE_CURRENT_BINARY_DIR}")
 
+set(Boost_ROOT "${CMAKE_SOURCE_DIR}/extern/boost_1_79_0/boost_install")
+set(Boost_INCLUDE_DIRS "${Boost_ROOT}/include")
+set(Boost_LIBRARY_DIRS "${Boost_ROOT}/lib")
+
 set(Boost_USE_STATIC_LIBS OFF CACHE BOOL "Use shared boost libraries" FORCE)
 set(Boost_USE_STATIC_RUNTIME OFF CACHE BOOL "Use shared boost runtime" FORCE)
 
 find_package(Boost COMPONENTS system filesystem REQUIRED)
+
 find_package(Threads REQUIRED)
+
+include_directories(${Boost_INCLUDE_DIRS})
+link_directories(${Boost_LIBRARY_DIRS})
 
 set(ENABLE_RELIC ON CACHE BOOL "Build relic by default" FORCE)
 set(MULTI PTHREAD CACHE STRING "Build relic with multithreading from pthread" FORCE)
@@ -24,42 +33,48 @@ set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH} "${PROJECT_SOURCE_DIR}/extern/EzPC/SC
 
 find_package(ABY QUIET)
 set(ENCRYPTO_UTILS_BUILD_TESTS OFF CACHE BOOL "Disable tests for the ENCRYPTO utils library" FORCE)
-if (ABY_FOUND)
+
+if(ABY_FOUND)
     message(STATUS "Found ABY")
-elseif (NOT ABY_FOUND AND NOT TARGET ABY::aby)
+elseif(NOT ABY_FOUND AND NOT TARGET ABY::aby)
     message("ABY was not found: add ABY subdirectory")
-    if (NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/ABY/CMakeLists.txt")
+
+    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/ABY/CMakeLists.txt")
         find_package(Git REQUIRED)
         message("initialize Git submodule: extern/ABY")
         execute_process(COMMAND git submodule update --init extern/ABY
-                WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
-    endif ()
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+    endif()
+
     add_subdirectory(extern/ABY)
-endif ()
+endif()
 
 # relic is already compiled by ENCRYPTO_utils, which is ABY's dependency
 set(RLC_LIBRARY "${PSI_ANALYTICS_BINARY_ROOT}/extern/ABY/lib/librelic_s.a")
 
 file(COPY
-        "${PROJECT_SOURCE_DIR}/extern/ABY/extern/ENCRYPTO_utils/extern/relic/include/"
-        "${PSI_ANALYTICS_BINARY_ROOT}/extern/ABY/extern/ENCRYPTO_utils/extern/relic/include/relic_conf.h"
+    "${PROJECT_SOURCE_DIR}/extern/ABY/extern/ENCRYPTO_utils/extern/relic/include/"
+    "${PSI_ANALYTICS_BINARY_ROOT}/extern/ABY/extern/ENCRYPTO_utils/extern/relic/include/relic_conf.h"
     DESTINATION
-        "${PROJECT_BINARY_DIR}/include/relic"
+    "${PROJECT_BINARY_DIR}/include/relic"
 )
 
 find_package(HashingTables QUIET)
-if (HashingTables_FOUND)
+
+if(HashingTables_FOUND)
     message(STATUS "Found HashingTables")
-elseif (NOT HashingTables_FOUND AND NOT TARGET HashingTables::hashingtables)
+elseif(NOT HashingTables_FOUND AND NOT TARGET HashingTables::hashingtables)
     message("HashingTables was not found: add HashingTables subdirectory")
-    if (NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/HashingTables/CMakeLists.txt")
+
+    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/HashingTables/CMakeLists.txt")
         find_package(Git REQUIRED)
         message("initialize Git submodule: extern/HashingTables")
         execute_process(COMMAND git submodule update --init extern/HashingTables
-                WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
-    endif ()
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+    endif()
+
     add_subdirectory(extern/HashingTables)
-endif ()
+endif()
 
 # we need to set these compile flags globally to compile compile libOTe and its dependencies
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -no-pie -pthread -maes -msse2 -msse3 -mrdrnd -msse4.1 -mpclmul -mavx -mavx2")
@@ -68,34 +83,40 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-ignored-attributes")
 
 set(ENABLE_SIMPLESTOT ON CACHE BOOL "Enable Simplest OT for Base OTs" FORCE)
 find_package(libOTe QUIET)
-if (libOTe_FOUND)
+
+if(libOTe_FOUND)
     message(STATUS "Found libOTe")
-elseif (NOT libOTe_FOUND AND NOT TARGET libOTe::libote)
+elseif(NOT libOTe_FOUND AND NOT TARGET libOTe::libote)
     message("libOTe was not found: add libOTe subdirectory")
-    if (NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/libOTe/CMakeLists.txt")
+
+    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/libOTe/CMakeLists.txt")
         find_package(Git REQUIRED)
         message("initialize Git submodule: extern/libOTe")
         execute_process(COMMAND git submodule update --init --recursive extern/libOTe
-                WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
-    endif ()
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+    endif()
+
     add_subdirectory(extern/libOTe)
-endif ()
+endif()
 
 add_dependencies(libOTe relic_s)
 
 find_package(EzPC QUIET)
-if (EzPC_FOUND)
+
+if(EzPC_FOUND)
     message(STATUS "Found EzPC")
-elseif (NOT EzPC_FOUND)
+elseif(NOT EzPC_FOUND)
     message("EzPC was not found: add EzPC subdirectory")
-    if (NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/EzPC/SCI/CMakeLists.txt")
+
+    if(NOT EXISTS "${PROJECT_SOURCE_DIR}/extern/EzPC/SCI/CMakeLists.txt")
         find_package(Git REQUIRED)
         message("initialize Git submodule: extern/EzPC")
         execute_process(COMMAND git submodule update --init extern/EzPC
-                WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
-    endif ()
-    add_subdirectory(extern/EzPC/SCI)
-endif ()
+            WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
+    endif()
 
-#add_subdirectory(extern/EzPC/SCI)
+    add_subdirectory(extern/EzPC/SCI)
+endif()
+
+# add_subdirectory(extern/EzPC/SCI)
 add_subdirectory(src)
